working with google service login, and token revokes

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -39,7 +39,7 @@
                                 </svg>
                             </button>
 
-                            <button class="mdl-button mdl-js-button mdl-js-ripple-effect logo-button logo-button--circle">
+                            <button class="mdl-button mdl-js-button mdl-js-ripple-effect logo-button logo-button--circle" type="button" ng-click="vm.googleLogin()">
 
                                 <svg style="width: 24px;height: 24px" viewBox="0 0 24 24"
                                      class="logo logo-circle logo-circle--google logo--clickable mdl-shadow--2dp">
