--- a/app/views/importDashboard.html
+++ b/app/views/importDashboard.html
@@ -110,14 +110,14 @@
                                     </div>
                                 </div>
                                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                                        ng-click="vm.processCSV(csvForm)" ng-disabled="csvForm.$invalid || vm.processingData" type="button">Upload
+                                        ng-click="vm.processCSV(csvForm)"
+                                        ng-disabled="csvForm.$invalid || vm.processingData" type="button">Upload
                                     <i class="material-icons">send</i>
                                 </button>
                             </div>
                         </div>
 
                     </div>
-
 
 
                 </form>
@@ -131,3 +131,4 @@
     <div class="mdl-snackbar__text"></div>
     <button class="mdl-snackbar__action" type="button"></button>
 </div>
+
