--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,4 +1,7 @@
 @import "../../bower_components/material-design-lite/src/material-design-lite";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins/table-row";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 
 .importer {
   .importer-navMenu {
@@ -90,6 +93,7 @@
 #toastSuccess{
   background-color: rgb(76, 175, 80);
 }
+
 
 //$logoPadding: 7px;
 //$logoHeight:  24px;
