--- a/app/views/csvImporter.html
+++ b/app/views/csvImporter.html
@@ -51,7 +51,7 @@
                                        name="latitudeName" ng-model="vm.importData.latitudeName" required>
 
                                 <label class="mdl-textfield__label mdl-textfield__label--icon" for="latitudeName">
-                                    <i class="material-icons">pin_drop</i>Latitude Column Name</label>
+                                    <i class="material-icons">place</i>Latitude Column Name</label>
                                 <span class="mdl-textfield__error">Required</span>
 
                             </div>
@@ -63,7 +63,7 @@
                                 <input class="mdl-textfield__input " type="text" id="longitudeName"
                                        name="longitudeName" ng-model="vm.importData.longitudeName" required>
                                 <label class="mdl-textfield__label mdl-textfield__label--icon" for="longitudeName">
-                                    <i class="material-icons">pin_drop</i>Longitude Column
+                                    <i class="material-icons">place</i>Longitude Column
                                     Name</label>
                                 <span class="mdl-textfield__error">Required</span>
 
@@ -87,7 +87,8 @@
                                     <input class="mdl-textfield__input" type="text" id="markerName"
                                            name="markerName" ng-model="vm.importData.markerName"
                                            ng-required="vm.importData.useMakerLabel" required>
-                                    <label class="mdl-textfield__label mdl-textfield__label--icon" for="markerName"><i class="material-icons">label</i>Marker column
+                                    <label class="mdl-textfield__label mdl-textfield__label--icon" for="markerName">
+                                        <i class="material-icons">pin_drop</i>Marker column
                                         name</label>
                                     <span class="mdl-textfield__error">required</span>
 
