--- a/app/views/summary.html
+++ b/app/views/summary.html
@@ -4,11 +4,26 @@
 
         <form action="#" class="importer-form" name="csvForm">
 
-            <div class="  table-responsive">
+            <div class="mdl-grid">
+                <div class="mdl-cell mdl-cell--12-col">
+                    <i class="material-icons" id="filterIcon">search</i>
+
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="filterText" ng-model="vm.filterText" ng-change="vm.reloadMaterialDesign()">
+                        <label class="mdl-textfield__label mdl-textfield__label--icon" for="filterText">
+                            Filter</label>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="table-responsive">
 
                 <table class="mdl-data-table table">
                     <thead>
+
                     <tr>
+                        <th>Exclude</th>
                         <th>Company Name</th>
                         <th>Founder</th>
                         <th>City</th>
@@ -23,49 +38,52 @@
                     </tr>
                     </thead>
                     <tbody>
-                            <tr ng-repeat="entry in vm.dataEntries" ng-cloak >
-                               <td>
-                                   <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox{{$index}}">
-                                       <input type="checkbox" id="checkbox{{$index}}" class="mdl-checkbox__input" checked>
-                                   </label>
+                    <tr ng-repeat="entry in vm.dataEntries | filter:vm.filterText">
+                        <td>
+                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox{{$index}}">
+                                <input type="checkbox" id="checkbox{{$index}}" class="mdl-checkbox__input" ng-checked="entry.active" ng-click="vm.updateEntryStatus(entry)">
+                            </label>
 
-                                    {{entry.companyName}}
-                                </td>
-                                <td>
-                                    {{entry.founder}}
-                                </td>
-                                <td>
-                                    {{entry.city}}
-                                </td>
-                                <td>
-                                    {{entry.country}}
-                                </td>
-                                <td class="mdl-cell--hide-tablet mdl-cell--hide-phone">
-                                    {{entry.postalCode}}
-                                </td>
-                                <td class="mdl-cell--hide-tablet mdl-cell--hide-phone">
-                                    {{entry.street}}
-                                </td>
-                                <td>
-                                    <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
-                                            data-img-src="{{entry.photo}}" type="button">
-                                        <i class="material-icons">pageview</i>
-                                    </button>
+                        </td>
+                        <td>
+                            <span class="mdl-checkbox__label">{{entry.companyName}}</span>
 
-                                </td>
-                                <td>
-                                    {{entry.homePage}}
-                                </td>
-                                <td class="mdl-cell--hide-phone">
-                                    {{entry.latitude}}
-                                </td>
-                                <td class="mdl-cell--hide-phone">
-                                    {{entry.longitude}}
-                                </td>
-                                <td class="mdl-cell--hide-phone">
-                                    {{entry.markerName}}
-                                </td>
-                            </tr>
+                        </td>
+                        <td>
+                            {{entry.founder}}
+                        </td>
+                        <td>
+                            {{entry.city}}
+                        </td>
+                        <td>
+                            {{entry.country}}
+                        </td>
+                        <td class="mdl-cell--hide-tablet mdl-cell--hide-phone">
+                            {{entry.postalCode}}
+                        </td>
+                        <td class="mdl-cell--hide-tablet mdl-cell--hide-phone">
+                            {{entry.street}}
+                        </td>
+                        <td>
+                            <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
+                                    data-img-src="{{entry.photo}}" type="button">
+                                <i class="material-icons">pageview</i>
+                            </button>
+
+                        </td>
+                        <td>
+                            {{entry.homePage}}
+                        </td>
+                        <td class="mdl-cell--hide-phone">
+                            {{entry.latitude}}
+                        </td>
+                        <td class="mdl-cell--hide-phone">
+                            {{entry.longitude}}
+                        </td>
+                        <td class="mdl-cell--hide-phone">
+                            {{entry.markerName}}
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
 
